# Gesta_RlsAutomacao

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  teste_completo.sh  vite.config.ts
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  errors.rs  main.rs  utils.rs
backend/src/handlers/: apontamentos.rs  auth.rs  depositos.rs  despesas.rs  mod.rs  obras.rs  profiles.rs  recibos_pagamento.rs
backend/src/models/: apontamento.rs  auth.rs  deposito.rs  despesa.rs  mod.rs  obra.rs  profile.rs
database/: init.sql
dns/: Corefile  Corefile-lan  Corefile-zt
dns/avahi/: Dockerfile  avahi-daemon.conf
frontend/: .gitignore  Dockerfile  nginx.conf  package.json  tailwind.config.js  tsconfig.json  twa-manifest.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useAuth.ts  useOfflineSync.ts
frontend/src/types/: index.ts
public/: manifest.json
scripts/: cleanup-test.ts  seed-dashboard-test.ts  seed-test.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src/app/: globals.css
src/app/(admin)/: layout.tsx
src/app/(tecnico)/: layout.tsx
src/components/admin/: ActivityFeed.tsx  AdminBottomNav.tsx  AdminSidebar.tsx  ApontamentosTable.tsx  CreateUserModal.tsx  DepositoModal.tsx  DespesaDetalheModal.tsx  DespesasTable.tsx  EditTecnicoModal.tsx  ObrasDetalheModal.tsx  ObrasGrid.tsx  TecnicosTable.tsx
src/components/shared/: ApontarModal.tsx  AppLayout.tsx  ConfirmDialog.tsx  HoraTypeSelector.tsx  (+3 more)
src/hooks/: useAuth.ts  useCamera.ts  useTimer.ts
src/types/: index.ts
(+72 files in other folders)
